--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/generate-sitemap.js && vite build",
+    "build": "node scripts/build-blog.js && node scripts/generate-sitemap.js && vite build",
     "preview": "vite preview",
     "serve": "vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap.js"
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "build-blog": "node scripts/build-blog.js"
   },
   "dependencies": {
     "vue": "^3.4.21",
