--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: gadm21/me
   branch: main
-  base_url: https://decap-oauth.netlify.app
+  base_url: https://gadgad.me/api
 
 media_folder: "public/assets/img/blog"
 public_folder: "/assets/img/blog"
