Fix Vercel rewrites to exclude /admin and /api paths

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,15 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    },
+    {
+      "source": "/admin/:path*",
+      "destination": "/admin/:path*"
+    },
+    {
+      "source": "/((?!admin|api).*)",
       "destination": "/index.html"
     }
   ],
