--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,8 @@ backend:
   name: github
   repo: gadm21/me
   branch: main
-  base_url: https://gadgad.me/api
+  base_url: https://www.gadgad.me/api
+  auth_endpoint: auth
 
 media_folder: "public/assets/img/blog"
 public_folder: "/assets/img/blog"
