--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,15 +3,23 @@
   "short_name": "Gad Mohamed",
   "description": "Ph.D. Student in Computer Science specializing in Wi-Fi Sensing, Federated Learning, and Differential Privacy",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#0a0a0a",
-  "theme_color": "#87a08a",
+  "background_color": "#0d1117",
+  "theme_color": "#2dd4bf",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/assets/img/me.jpg",
+      "src": "/assets/img/icon-192.png",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/assets/img/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/assets/img/me.jpg",
@@ -19,5 +27,23 @@
       "type": "image/jpeg"
     }
   ],
-  "categories": ["education", "research", "portfolio"]
+  "categories": ["education", "research", "portfolio"],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Research",
+      "url": "/research",
+      "description": "View research projects"
+    },
+    {
+      "name": "Publications",
+      "url": "/publications",
+      "description": "View publications"
+    },
+    {
+      "name": "Blog",
+      "url": "/blog",
+      "description": "Read blog posts"
+    }
+  ]
 }
