--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,34 +1,29 @@
 {
   "name": "Gad Mohamed - Academic Portfolio",
-  "short_name": "Gad Mohamed",
+  "short_name": "Gad Gad",
   "description": "Ph.D. Student in Computer Science specializing in Wi-Fi Sensing, Federated Learning, and Differential Privacy",
   "start_url": "/",
+  "id": "/",
   "scope": "/",
   "display": "standalone",
   "background_color": "#0d1117",
   "theme_color": "#2dd4bf",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "icons": [
     {
-      "src": "/assets/img/icon-192.png",
+      "src": "/assets/img/me.jpg",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/assets/img/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/jpeg",
+      "purpose": "any"
     },
     {
       "src": "/assets/img/me.jpg",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/jpeg",
+      "purpose": "any"
     }
   ],
   "categories": ["education", "research", "portfolio"],
-  "screenshots": [],
   "shortcuts": [
     {
       "name": "Research",
