--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "build-blog": "node scripts/build-blog.js"
   },
   "dependencies": {
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "gsap": "^3.12.5",
-    "axios": "^1.6.7",
     "@vueuse/core": "^10.9.0",
-    "marked": "^12.0.0"
+    "axios": "^1.6.7",
+    "gsap": "^3.12.5",
+    "marked": "^12.0.0",
+    "pdfjs-dist": "^5.4.449",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.1.6",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
     "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
     "sass": "^1.71.1",
-    "terser": "^5.27.0"
+    "tailwindcss": "^3.4.1",
+    "terser": "^5.27.0",
+    "vite": "^5.1.6"
   }
 }
