--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gad Mohamed - Academic Portfolio",
+  "name": "Gad Gad - Academic Portfolio",
   "short_name": "Gad Gad",
   "description": "Ph.D. Student in Computer Science specializing in Wi-Fi Sensing, Federated Learning, and Differential Privacy",
   "start_url": "/",
